feat: Update project name and branding
Refactors the project name and branding elements to reflect "Quality Home Portal Imobiliário". This includes updating:
- `package.json` name.
- `index.html` title.
- `metadata.json` name and description.
- Tailwind CSS color configuration to a new palette.
- Styles in `App.tsx` and `components/PropertyListings.tsx` to use the new color scheme.
- Footer text in `App.tsx` to include the new project name.
- Header and Hero components to align with new design and naming conventions.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quality Home | Real Estate</title>
+    <title>Quality Home Portal Imobiliário</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,22 +17,14 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              'brand-blue': {
-                'DEFAULT': '#2563EB',
-                'dark': '#1E40AF',
-                'light': '#3B82F6'
-              },
-              'brand-neutral': {
-                'white': '#FFFFFF',
-                'light': '#F8FAFC',
-                'medium': '#E2E8F0',
-                'dark': '#64748B',
-                'black': '#1E293B',
-              },
+              'brand-lime': '#cbe158',
+              'brand-purple': '#9b3388',
+              'brand-dark': '#333333',
+              'brand-gray': '#666666',
+              'brand-light-gray': '#f2f2f2',
               'brand-status': {
                 'green': '#10B981',
                 'orange': '#F59E0B',
-                'red': '#EF4444'
               }
             }
           }
