--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" integrity="sha512-gc3xjCmIy673V6MyOag1U9mCtdstibZlwNznGOK+/S3afL/eoHnFItHhzyUXItWpuR6bFTGA3AXOB2nk5uppUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+    <!-- Leaflet and Leaflet Draw JS - Moved to head to ensure they load before the app script -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js" integrity="sha512-ozELPBC1bB1i3EGdaulNkdo_iQnZC960iOX3SnP7M9a7jBjIKxOA19i1M9KAxYv04a7p+4lqRQu1i2UeP/wQlw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,10 +52,6 @@
 </head>
   <body>
     <div id="root"></div>
-
-    <!-- Leaflet and Leaflet Draw JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js" integrity="sha512-ozELPBC1bB1i3EGdaulNkdo_iQnZC960iOX3SnP7M9a7jBjIKxOA19i1M9KAxYv04a7p+4lqRQu1i2UeP/wQlw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <script type="module" src="/index.tsx"></script>
   </body>
