--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         }
       }
     </script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   <script type="importmap">
 {
   "imports": {
