feat: Add location confirmation modal and Google Maps integration
Integrates Google Maps Places API to enhance location selection functionality.
Adds a new modal for confirming property location, allowing users to adjust the pin's position if necessary.
Introduces translations for the new modal and the "Season" operation type in Portuguese, English, and Spanish.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       }
     </script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsX9l10XCu3TtSCU1BSx-qOYrwUKYw2xk&libraries=places" async defer></script>
   <script type="importmap">
 {
   "imports": {
