fix: Remove defer from Leaflet scripts
The `defer` attribute was unnecessarily preventing Leaflet and Leaflet.draw scripts from executing correctly. This commit removes the `defer` attribute to ensure proper initialization of the map functionalities.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" integrity="sha512-gc3xjCmIy673V6MyOag1U9mCtdstibZlwNznGOK+/S3afL/eoHnFItHhzyUXItWpuR6bFTGA3AXOB2nk5uppUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!-- Leaflet and Leaflet Draw JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin="" defer></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js" integrity="sha512-sLw91tXThPzF89F3sXvQstmAe/gE5t8Fk7T6YxO3aohhqDk/0fYSA8U5G2jOBT32N8s125/4T2PzBf1rW852gA==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js" integrity="sha512-sLw91tXThPzF89F3sXvQstmAe/gE5t8Fk7T6YxO3aohhqDk/0fYSA8U5G2jOBT32N8s125/4T2PzBf1rW852gA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
