--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "@google/genai": "https://esm.sh/@google/genai"
+    "@google/genai": "https://esm.sh/@google/genai",
+    "react-leaflet": "https://esm.sh/react-leaflet@^4.2.1"
   }
 }
 </script>
