--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     "react": "https://aistudiocdn.com/react@^18.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^18.2.0/",
     "@google/genai": "https://esm.sh/@google/genai",
-    "react-leaflet": "https://esm.sh/react-leaflet@^4.2.1"
+    "react-leaflet": "https://esm.sh/react-leaflet@^4.2.1",
+    "react-leaflet-draw": "https://esm.sh/react-leaflet-draw@^0.20.4"
   }
 }
 </script>
