--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js" integrity="sha512-sLw91tXThPzF89F3sXvQstmAe/gE5t8Fk7T6YxO3aohhqDk/0fYSA8U5G2jOBT32N8s125/4T2PzBf1rW852gA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
+    <style>
+      /* Reposition Leaflet Draw Toolbar to Bottom Center */
+      .leaflet-top.leaflet-left {
+        top: auto !important;
+        left: 50% !important;
+        bottom: 30px !important;
+        transform: translateX(-50%) !important;
+      }
+      .leaflet-draw-toolbar {
+        border-radius: 8px !important;
+        box-shadow: 0 2px 10px rgba(0,0,0,0.2) !important;
+      }
+    </style>
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
