--- a/index.html
+++ b/index.html
@@ -6,21 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quality Home Portal Imobiliário</title>
     
-    <!-- Leaflet and Leaflet Draw CSS -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.css" integrity="sha512-gc3xjCmIy673V6MyOag1U9mCtdstibZlwNznGOK+/S3afL/eoHnFItHhzyUXItWpuR6bFTGA3AXOB2nk5uppUA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-    <!-- Leaflet and Leaflet Draw JS -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.draw/1.0.4/leaflet.draw.js" integrity="sha512-sLw91tXThPzF89F3sXvQstmAe/gE5t8Fk7T6YxO3aohhqDk/0fYSA8U5G2jOBT32N8s125/4T2PzBf1rW852gA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
     <style>
-      /* Reposition Leaflet Draw Toolbar to Bottom Center */
+      /* Reposition Leaflet Draw Toolbar to Bottom Center & Ensure Visibility */
       .leaflet-top.leaflet-left {
         top: auto !important;
         left: 50% !important;
         bottom: 30px !important;
         transform: translateX(-50%) !important;
+        z-index: 1001 !important; /* Above map UI, below modals */
       }
       .leaflet-draw-toolbar {
         border-radius: 8px !important;
@@ -32,6 +25,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet-draw@1.0.4/dist/leaflet.draw.css" integrity="sha512-vzLg3SPLgOOl/qdEDITcCYgoBa/WzffIoHQpl9S+BLT7+iOM+jRjO4LOHb/ciQuN27jFroY3T55Gk4cWbxZgqg==" crossorigin=""/>
     <script>
       tailwind.config = {
         theme: {
@@ -58,11 +53,14 @@
   <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^18.2.0/",
-    "react": "https://aistudiocdn.com/react@^18.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^18.2.0/",
+    "react": "https://esm.sh/react@18.2.0",
+    "react/": "https://esm.sh/react@18.2.0/",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
     "@google/genai": "https://esm.sh/@google/genai",
-    "react-leaflet": "https://esm.sh/react-leaflet@^4.2.1"
+    "react-leaflet": "https://esm.sh/react-leaflet@4.2.1",
+    "leaflet": "https://esm.sh/leaflet@1.9.4",
+    "leaflet-draw": "https://esm.sh/leaflet-draw@1.0.4"
   }
 }
 </script>
