feat: Improve drawing experience in MapDrawPage
Refactors the drawing logic into a dedicated `DrawingManager` component. This improves component reusability and state management.

Introduces new translations for "Clear Drawing", "Drawing...", and "Draw your search area".

Removes outdated custom Leaflet CSS for toolbar positioning, as the new component handles this more effectively.

--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
     <title>Quality Home Portal Imobiliário</title>
     
     <style>
-      /* Reposition Leaflet Draw Toolbar to Bottom Center & Ensure Visibility */
-      .leaflet-top.leaflet-left {
-        top: auto !important;
-        left: 50% !important;
-        bottom: 30px !important;
-        transform: translateX(-50%) !important;
-        z-index: 1001 !important; /* Above map UI, below modals */
-      }
-      .leaflet-draw-toolbar {
-        border-radius: 8px !important;
-        box-shadow: 0 2px 10px rgba(0,0,0,0.2) !important;
-      }
+      /* Custom styles can go here if needed in the future */
     </style>
 
     <script src="https://cdn.tailwindcss.com"></script>
