feat: Integrate Supabase for data management
Adds Supabase SDK to the project for robust data handling. Removes direct JWT decoding for Google Sign-In, preparing for a more integrated authentication flow. Updates type definitions to better align with Supabase schema and improve data consistency across the application.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         }
       }
     </script>
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    
   <script type="importmap">
 {
   "imports": {
@@ -49,7 +49,8 @@
     "@google/genai": "https://esm.sh/@google/genai",
     "react-leaflet": "https://esm.sh/react-leaflet@4.2.1",
     "leaflet": "https://esm.sh/leaflet@1.9.4",
-    "leaflet-draw": "https://esm.sh/leaflet-draw@1.0.4"
+    "leaflet-draw": "https://esm.sh/leaflet-draw@1.0.4",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2"
   }
 }
 </script>
