feat: Add property details to database and UI
Includes changes to the database schema, API data transformations, and UI forms to support new property characteristics and occupancy status. Also updates the favicon URL.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/riquelima/QualityHomePortalImobiliario/main/logoBrowser.png" />
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/4dqSTCqs/logo-Browser.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quality Home Portal Imobiliário</title>
     
