--- a/index.html
+++ b/index.html
@@ -7,37 +7,7 @@
     <title>Quality Home Portal Imobiliário</title>
     
     <style>
-      @keyframes slide-up {
-        from {
-          transform: translateY(100%);
-        }
-        to {
-          transform: translateY(0);
-        }
-      }
-
-      .animate-slide-up {
-        animation: slide-up 0.3s ease-out forwards;
-      }
-
-      @keyframes logo-splash {
-        0% {
-          opacity: 0;
-          transform: scale(0.8);
-        }
-        50% {
-          opacity: 1;
-          transform: scale(1.05);
-        }
-        100% {
-            opacity: 1;
-            transform: scale(1);
-        }
-      }
-
-      .animate-logo-splash {
-        animation: logo-splash 1s ease-out forwards;
-      }
+      /* Custom styles can go here if needed in the future */
     </style>
 
     <script src="https://cdn.tailwindcss.com"></script>
