--- a/index.html
+++ b/index.html
@@ -7,7 +7,68 @@
     <title>Quality Home Portal Imobiliário</title>
     
     <style>
-      /* Custom styles can go here if needed in the future */
+      @keyframes slide-up {
+        from {
+          transform: translateY(100%);
+        }
+        to {
+          transform: translateY(0);
+        }
+      }
+
+      .animate-slide-up {
+        animation: slide-up 0.3s ease-out forwards;
+      }
+      
+      @keyframes slide-in-right {
+        from { transform: translateX(100%); }
+        to { transform: translateX(0); }
+      }
+      @keyframes slide-out-left {
+        from { transform: translateX(0); }
+        to { transform: translateX(-30%); }
+      }
+      @keyframes slide-in-left {
+        from { transform: translateX(-30%); }
+        to { transform: translateX(0); }
+      }
+      @keyframes slide-out-right {
+        from { transform: translateX(0); }
+        to { transform: translateX(100%); }
+      }
+
+      .page-enter {
+        animation: slide-in-right 0.35s ease-out forwards;
+      }
+      .page-exit {
+        animation: slide-out-left 0.35s ease-out forwards;
+        z-index: 0 !important;
+      }
+      .page-enter-back {
+        animation: slide-in-left 0.35s ease-out forwards;
+      }
+      .page-exit-back {
+        animation: slide-out-right 0.35s ease-out forwards;
+      }
+
+      @keyframes logo-splash {
+        0% {
+          opacity: 0;
+          transform: scale(0.8);
+        }
+        50% {
+          opacity: 1;
+          transform: scale(1.05);
+        }
+        100% {
+            opacity: 1;
+            transform: scale(1);
+        }
+      }
+
+      .animate-logo-splash {
+        animation: logo-splash 1s ease-out forwards;
+      }
     </style>
 
     <script src="https://cdn.tailwindcss.com"></script>
