feat: Move API keys to window config
Centralizes API keys for Google Gemini and Maps into a global `APP_CONFIG` object on the window. This removes hardcoded environment variable references, improving flexibility and security for managing sensitive credentials.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
       }
     </script>
     
+    <script>
+      window.APP_CONFIG = {
+        GEMINI_API_KEY: 'AIzaSyCsX9l10XCu3TtSCU1BSx-qOYrwUKYw2xk',
+        MAPS_API_KEY: 'AIzaSyDukeY7JJI9UkHIFbsCZOrjPDRukqvUOfA'
+      };
+    </script>
+    
   <script type="importmap">
 {
   "imports": {
