feat: Enhance PWA support and Gemini API resilience
Improves Progressive Web App (PWA) capabilities by adding necessary meta tags for better integration with mobile devices.

Refactors Gemini API calls in both Hero and PublishJourneyPage components to use a new `generateContentWithRetry` function. This function implements exponential backoff and retry logic for increased resilience against API transient failures.

The API key is now loaded from environment variables for improved security.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="https://i.postimg.cc/4dqSTCqs/logo-Browser.png" />
+    <link rel="apple-touch-icon" href="https://i.imgur.com/FuxDdyF.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="https://i.imgur.com/FuxDdyF.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="https://i.imgur.com/FuxDdyF.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Quallity Home">
+    <meta name="application-name" content="Quallity Home">
+    <meta name="theme-color" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quallity Home Portal Imobiliário</title>
     
