--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="apple-touch-icon" href="https://i.imgur.com/FuxDdyF.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="https://i.imgur.com/FuxDdyF.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="https://i.imgur.com/FuxDdyF.png" />
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-title" content="Quallity Home">
