--- a/index.html
+++ b/index.html
@@ -48,32 +48,12 @@
       }
     </style>
 
-    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap" rel="stylesheet">
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            fontFamily: {
-              sans: ['Plus Jakarta Sans', 'sans-serif'],
-            },
-            colors: {
-              'brand-red': '#D81B2B',
-              'brand-navy': '#0D284F',
-              'brand-dark': '#041020',
-              'brand-gray': '#5A677D',
-              'brand-light-gray': '#F0F2F5',
-              'brand-status': {
-                'green': '#10B981',
-                'orange': '#F59E0B',
-              }
-            }
-          }
-        }
-      }
-    </script>
+    
+    <!-- Tailwind CSS CDN -->
+    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
     
   <script type="importmap">
 {
